fix homepage player imitation not having play button in center on narrower platforms

--- a/www/css/screen.css
+++ b/www/css/screen.css
@@ -39,7 +39,7 @@ a[href^="error:"] {
 footer .legal {float: right; margin-right: 10px;}
 .sortable-arrow {font-size: 120%; font-weight: bold; background-color: rgba(120, 160, 240, .5); padding: .1em .5em .2em .5em; border-radius: .3em; color: black;}
 .featured_video {display: block; max-width: 694px; height: 395px; background-color: black; background-repeat: no-repeat; background-position: center center;}
-.youtube_play {display: block; position:absolute; left: 293px; top: 160px; background: url('/images/youtube_play.png'); width: 107px; height: 73px; opacity: .6;}
+.youtube_play {display: block; position: relative; top: 161px; background: url('/images/youtube_play.png'); width: 107px; height: 73px; opacity: .6; margin-left: auto; margin-right: auto;}
 a:hover .youtube_play {opacity: 1;}
 .featured_header {display: block; position: absolute; width: 100%; top: 0; left: 0; font-size: 16pt; color: white; background-color: rgba(0, 0, 0, .6); height: 25pt;}
 .featured_header .label {padding: 8pt; top: 5pt; position: relative;}
